--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "ajv": "^6.12.6",
+    "ajv": "^8.17.1"
     "ajv-keywords": "^5.1.0",
     "axios": "^1.8.3",
     "babel-runtime": "^6.26.0",
